# dashy-rust

./: .env  Cargo.toml  Dockerfile  fly.toml  test.http
.github/workflows/: fly.yml
src/: handler.rs  main.rs  models.rs  postgres.rs
