[package]
name = "dashy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["all", "json", "chrono", "uuid", "time", "runtime-tokio-rustls"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "serde"] }
